Couple of minor corrections to the website layout (right margin, vertical alignment on front page)

--- a/www/trunk/public_html/phc.css
+++ b/www/trunk/public_html/phc.css
@@ -2,7 +2,7 @@ body {
 	margin: 0px;
 	font-family: sans-serif;
 	font-size: 10pt;
-	height=100%;
+	height: 100%;
 }
 h1 {
 	font-size: 16pt;
@@ -17,8 +17,10 @@ h3 {
 	margin-bottom: 0pt;
 }
 .maintable {
-	margin: 5px;
 	width: 100%;
+}
+.maintable TD {
+  padding: 3px;
 }
 span.phc {
 	color: #882222;
@@ -32,13 +34,11 @@ a:hover {
 .svn {
 	background: #cccccc;
 	border: solid 1px #8a7640;
-	margin-right: 5px;
 	padding: 3px;
 }
 .warningbox {
 	border: solid 1px black;
 	padding: 5px;
-	margin-right: 5px;
 	color: #b53614;
 	background: #efdba7;
 }
